Bug 491466 - \r whitespace char not shown

--- a/bundles/code/org.eclipse.fx.code.editor.fx.themes/css/dark-highlight.css
+++ b/bundles/code/org.eclipse.fx.code.editor.fx.themes/css/dark-highlight.css
@@ -37,6 +37,11 @@
 	-fx-content: "\u21B5";
 }
 
+.styled-text-area .invisible-char.winenter {
+	-fx-content: "\u27E1\u21B5";
+}
+
+
 .styled-text-area .list-view {
 	-source-editor-code: #b8c4d1;
 	-source-editor-operator: #b8c4d1;
